#41 Prevent the diagrams from being squashed when too big for available space in container

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -11,6 +11,10 @@ article {
     margin-bottom: 90px;
 }
 
+section {
+    overflow: scroll;
+}
+
 section.description {
     flex: 50%;
 }
